<resources>
    <string name="app_name">Travel Planner</string>
    <string name="tp" translatable="false">TP</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="enter">Enter</string>
    <string name="signIn">Sign in</string>
    <string name="signUp">Sign up</string>
    <string name="authentication">Authentication</string>
    <string name="ok" translatable="false">OK</string>
    <string name="open">Open</string>
    <string name="error_message">Error message</string>
    <string name="user_logged">User logged</string>
    <string name="user_logout">User logout</string>
    <string name="logout">Logout</string>
    <string name="city">City</string>
    <string name="city_image">City image</string>
    <string name="name">Name</string>
    <string name="start_search">Start search</string>
    <string name="description">Description</string>
    <string name="places_colon">Places:</string>
    <string name="plus" translatable="false">+</string>
    <string name="place_photo">Place photo</string>
    <string name="add_button">Add button</string>
    <string name="cities_colon">Cities:</string>
    <string name="drop_selection">Drop selection</string>
    <string name="accept_selection">Accept selection</string>
    <string name="selected_colon">Selected:</string>
    <string name="travels">Travels</string>
    <string name="places">Places</string>
    <string name="travel">travel</string>
</resources>